FireAlarmApplication.Web/mtg_debug_20260127_163126.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:31:26
NetCDF: C:\Users\kubil\AppData\Local\Temp\fd1ce1ce-c4e3-4d2b-a685-8b51469cc46c.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
